--- a/ClinicManagement_proj/ClinicManagement_proj.csproj
+++ b/ClinicManagement_proj/ClinicManagement_proj.csproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,8 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,13 +58,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="DAL\Appointment.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Doctor.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\HealthCareClinicModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HealthCareClinicModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\HealthCareClinicModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\HealthCareClinicModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HealthCareClinicModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Patient.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\Schedule.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\sp_BookAppointment_Result.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\sp_GetAvailableSlots_Result.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\sp_GetDoctorCurrentSchedule_Result.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\User.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\vw_DoctorCurrentSchedule.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\vw_DoctorWorkloadStats.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\vw_PatientRecordsSummary.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAL\vw_UpcomingAppointments.cs">
+      <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="UI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="UI\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -63,6 +126,15 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="App.config" />
+    <EntityDeploy Include="DAL\HealthCareClinicModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>HealthCareClinicModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DAL\HealthCareClinicModel.edmx.diagram">
+      <DependentUpon>HealthCareClinicModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -74,7 +146,31 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <Folder Include="BLL\DTO\" />
+    <Folder Include="BLL\SERVICES\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DAL\HealthCareClinicModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>HealthCareClinicModel.edmx</DependentUpon>
+      <LastGenOutput>HealthCareClinicModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DAL\HealthCareClinicModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>HealthCareClinicModel.edmx</DependentUpon>
+      <LastGenOutput>HealthCareClinicModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" />
 </Project>
