--- a/ClinicManagement_proj/App.config
+++ b/ClinicManagement_proj/App.config
@@ -3,6 +3,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ClinicManagement_proj.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <entityFramework>
     <providers>
@@ -12,4 +15,14 @@
   <connectionStrings>
     <add name="HealthCareClinicDBEntities" connectionString="metadata=res://*/DAL.HealthCareClinicModel.csdl|res://*/DAL.HealthCareClinicModel.ssdl|res://*/DAL.HealthCareClinicModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=HealthCareClinicDB;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <userSettings>
+    <ClinicManagement_proj.Properties.Settings>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Username" serializeAs="String">
+        <value />
+      </setting>
+    </ClinicManagement_proj.Properties.Settings>
+  </userSettings>
 </configuration>
