--- a/ClinicManagement_proj/ClinicManagement_proj.csproj
+++ b/ClinicManagement_proj/ClinicManagement_proj.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\UTILS\Notification.cs" />
+    <Compile Include="BLL\UTILS\NotificationManager.cs" />
     <Compile Include="DAL\Appointment.cs">
       <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
     </Compile>
@@ -115,14 +117,44 @@
     <Compile Include="DAL\vw_UpcomingAppointments.cs">
       <DependentUpon>HealthCareClinicModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="UI\AdminDashboard\AdminDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AdminDashboard\AdminDashboard.Designer.cs">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\AdminDashboard\AdminDashboard.Doctor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AdminDashboard\AdminDashboard.User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\DoctorDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\DoctorDashboard.Designer.cs">
+      <DependentUpon>DoctorDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\ReceptionistDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ReceptionistDashboard.Designer.cs">
+      <DependentUpon>ReceptionistDashboard.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -132,6 +164,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\AdminDashboard\AdminDashboard.resx">
+      <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\DoctorDashboard.resx">
+      <DependentUpon>DoctorDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\ReceptionistDashboard.resx">
+      <DependentUpon>ReceptionistDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <EntityDeploy Include="DAL\HealthCareClinicModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -169,6 +213,26 @@
       <DependentUpon>HealthCareClinicModel.edmx</DependentUpon>
       <LastGenOutput>HealthCareClinicModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Static\bell-solid-full.svg" />
+    <Content Include="Static\calendar-days-solid-full.svg" />
+    <Content Include="Static\chart-pie-solid-full.svg" />
+    <Content Include="Static\dashboard_icon.ico" />
+    <Content Include="Static\dashboard_icon.png" />
+    <Content Include="Static\dashboard_icon.svg" />
+    <Content Include="Static\doctor_icon.png" />
+    <Content Include="Static\doctor_icon_light.png" />
+    <Content Include="Static\hospital-user-solid-full.svg" />
+    <Content Include="Static\notifications_icon.png" />
+    <Content Include="Static\patients_icon.png" />
+    <Content Include="Static\patients_icon_light.png" />
+    <Content Include="Static\reports_icon.png" />
+    <Content Include="Static\reports_icon_light.png" />
+    <Content Include="Static\schedule_icon.png" />
+    <Content Include="Static\schedule_icon_light.png" />
+    <Content Include="Static\stethoscope-solid-full.svg" />
+    <Content Include="Static\users-solid-full.svg" />
+    <Content Include="Static\users_icon.png" />
+    <Content Include="Static\users_icon_light.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
