--- a/ClinicManagement_proj/ClinicManagement_proj.csproj
+++ b/ClinicManagement_proj/ClinicManagement_proj.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -15,6 +15,21 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -74,6 +89,7 @@
     <Compile Include="BLL\Services\PatientService.cs" />
     <Compile Include="BLL\Services\RoleService.cs" />
     <Compile Include="BLL\Services\UserService.cs" />
+    <Compile Include="BLL\Utils\Extensions.cs" />
     <Compile Include="BLL\Utils\Notification.cs" />
     <Compile Include="BLL\Utils\NotificationManager.cs" />
     <Compile Include="DAL\Appointment.cs">
@@ -148,6 +164,13 @@
     </Compile>
     <Compile Include="UI\AdminDashboard\Controllers\AppointmentManagementController.cs" />
     <Compile Include="UI\AdminDashboard\Controllers\DoctorManagementController.cs" />
+    <Compile Include="UI\AdminDashboard\CustomPanels\IDashboardPanel.cs" />
+    <Compile Include="UI\AdminDashboard\CustomPanels\UserManagementPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\AdminDashboard\CustomPanels\UserManagementPanel.Designer.cs">
+      <DependentUpon>UserManagementPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Utils\ImageHelper.cs" />
     <Compile Include="UI\IPanelController.cs" />
     <Compile Include="UI\Utils\NavigationManager.cs" />
@@ -181,6 +204,7 @@
     <Compile Include="UI\ReceptionistDashboard.Designer.cs">
       <DependentUpon>ReceptionistDashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Utils\Theme.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -193,6 +217,9 @@
     </Compile>
     <EmbeddedResource Include="UI\AdminDashboard\AdminDashboard.resx">
       <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\AdminDashboard\CustomPanels\UserManagementPanel.resx">
+      <DependentUpon>UserManagementPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\DoctorDashboard.resx">
       <DependentUpon>DoctorDashboard.cs</DependentUpon>
@@ -222,7 +249,18 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.8">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.8 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
