--- a/ClinicManagement_proj/ClinicManagement_proj.csproj
+++ b/ClinicManagement_proj/ClinicManagement_proj.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -150,6 +150,13 @@
     </Compile>
     <Compile Include="UI\Controllers\AppointmentManagementController.cs" />
     <Compile Include="UI\Controllers\DoctorManagementController.cs" />
+    <Compile Include="UI\CustomPanels\IDashboardPanel.cs" />
+    <Compile Include="UI\CustomPanels\UserManagementPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UI\CustomPanels\UserManagementPanel.Designer.cs">
+      <DependentUpon>UserManagementPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Utils\ImageHelper.cs" />
     <Compile Include="UI\IPanelController.cs" />
     <Compile Include="UI\Utils\NavigationManager.cs" />
@@ -195,6 +202,9 @@
     </Compile>
     <EmbeddedResource Include="UI\AdminDashboard.resx">
       <DependentUpon>AdminDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\CustomPanels\UserManagementPanel.resx">
+      <DependentUpon>UserManagementPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\DoctorDashboard.resx">
       <DependentUpon>DoctorDashboard.cs</DependentUpon>
