database clean up | using db procedure to retrieve timeslots in code | implemented smart doctor selection in scheduling controller

--- a/ClinicManagement_proj/App.config
+++ b/ClinicManagement_proj/App.config
@@ -12,9 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="HealthCareClinicDBEntities" connectionString="metadata=res://*/DAL.HealthCareClinicModel.csdl|res://*/DAL.HealthCareClinicModel.ssdl|res://*/DAL.HealthCareClinicModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=HealthCareClinicDB_T2;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="HealthCareClinicDBEntities" connectionString="metadata=res://*/DAL.HealthCareClinicModel.csdl|res://*/DAL.HealthCareClinicModel.ssdl|res://*/DAL.HealthCareClinicModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=HealthCareClinicDB_T2;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="HealthCareClinicDB_T2Entities" connectionString="metadata=res://*/DAL.HealthCareClinicModel.csdl|res://*/DAL.HealthCareClinicModel.ssdl|res://*/DAL.HealthCareClinicModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=HealthCareClinicDB_T2;integrated security=True;encrypt=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <userSettings>
     <ClinicManagement_proj.Properties.Settings>
       <setting name="Password" serializeAs="String">
